Corrected horizontal scroll Added various events to the app to change the UI state Cosmetic changes to the application stylesheet

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -11,8 +11,16 @@ div {
   color: #fff
 }
 
-.day.selected {
+.bolder {
+  font-weight: bold;
+}
 
+.day.faded {
+  color: gray !important;
+}
+
+.day.selected {
+  color: #cff700 !important;
 }
 
 .hour.selected {
@@ -25,6 +33,10 @@ div {
 
 .month {
   padding-left: 10px;
+}
+
+.back-arrow {
+  padding: 5px;
 }
 
 .circle-ico {
